Compiling is now generates launch script